# airbnb-booking-prediction

./: README.md  pyproject.toml
booking_model/: prediction_model.py  script.py
src/app/: import_routes.py  main.py
src/predict/: route.py
